[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/Effects/Materials/mat_batsmoke.tres" type="Material" id=1]
[ext_resource path="res://src/Levels/Primrose/rotation_disabler.gd" type="Script" id=2]
[ext_resource path="res://Axl_mod/Player/Projectiles/BossWeapons/BlastLauncher/BlastLauncherProjectile.gd" type="Script" id=3]
[ext_resource path="res://src/Actors/NewStateMachine/audioplayer.gd" type="Script" id=4]
[ext_resource path="res://src/Effects/Materials/launch_smoke.tres" type="Material" id=5]
[ext_resource path="res://Axl_mod/Player/Projectiles/BossWeapons/BlastLauncher/BlastLauncher.res" type="SpriteFrames" id=6]
[ext_resource path="res://src/Effects/Textures/small_smoke.png" type="Texture" id=7]
[ext_resource path="res://src/Sounds/BlastLaunch - Bounce.ogg" type="AudioStream" id=8]
[ext_resource path="res://src/Sounds/BlastLaunch - Fire.ogg" type="AudioStream" id=9]
[ext_resource path="res://src/Actors/Player/BossWeapons/BlastLauncher/IntenseExplosion.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.75, 8 )

[node name="BlastLauncher" type="KinematicBody2D" groups=["Player Projectile"]]
z_index = 8
collision_layer = 4
script = ExtResource( 3 )
damage = 4.0
damage_to_bosses = 2.5
damage_to_weakness = 15.0
time_outside_screen = 2.0
fire_sound = ExtResource( 9 )
break_guards = true
explosion = ExtResource( 10 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 6 )
animation = "blast"
playing = true

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0 )
scale = Vector2( 2, 1 )
shape = SubResource( 1 )

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 4 )

[node name="particles2D" type="Particles2D" parent="."]
material = ExtResource( 1 )
z_index = -1
amount = 4
lifetime = 0.35
local_coords = false
process_material = ExtResource( 5 )
texture = ExtResource( 7 )

[node name="disabler" type="Node" parent="."]
script = ExtResource( 2 )
fade_out = true
delete_after_fade = true
undo_on_rotation_end = false
